fix right margin and aligning

--- a/src/components/NewContactForm.scss
+++ b/src/components/NewContactForm.scss
@@ -1,12 +1,11 @@
 .new-contact-form {
   width: 100%;
   height: 150px;
-  margin: 10px;
-  padding: 5px;
+  margin: 10px 0 10px 0;
+  padding: 0 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   background-color: lightgrey;
-  
 }
